# teste-ab

./: .gitignore  Dockerfile.app  Dockerfile.streamlit  Dockerfile.webscraper  README.md  create_tables.sql  docker-compose.yml  pa_james_abn_notebook.ipynb  pa_james_notebook.ipynb  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json
mab/: thompson_agent.py
notebook/: pa_james_abn_notebook.ipynb  pa_james_design_de_experimentos.ipynb  pa_james_notebook.ipynb
pa_bayesion/: analytics.py  analytics_bayesian.py  app.py  visitor_control.py  visitor_treatment.py  webpage_control.py  webscraper.py
pa_bayesion/mab/: .gitignore  Dockerfile.app  Dockerfile.streamlit  Dockerfile.webscraper  analytics_bayesian.py  app.py  data_experiment.csv  docker-compose.yml  pyproject.toml  streamlit_analytics_bayesian.py  thompson_agent.py  variante.py  visitor.py
pa_bayesion/mab/infra/configs/: connection.py
pa_bayesion/mab/infra/repository/: experimento_repository.py
pa_bayesion/mab/templates/: page01.html  pg_layout_blue.html  pg_layout_red.html
pa_bayesion/templates/: pg_layout_red.html
streamlit/: analytics_bayesian.py  sidebar.py  streamlit_analytics_bayesian.py
web/: app.py  thompson_agent.py  variante.py
web/infra/configs/: connection.py
web/infra/repository/: experimento_repository.py
webscraper/: visitor.py  webscraper.py
