[tool.poetry]
name = "james"
version = "0.1.0"
description = ""
authors = ["Douglas Saturnino <douglasaturnino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.6,<3.13"
pandas = "^2.1.0"
flask = "^3.0.0"
streamlit = "^1.32.2"
scipy = "^1.12.0"
sqlalchemy = "^2.0.28"


[tool.poetry.group.streamlit.dependencies]
streamlit = "^1.25.0"
scipy = "^1.11.1"


[tool.poetry.group.webscraper.dependencies]
selenium = "^4.10.0"
numpy = "^1.26.4"
gunicorn = "^21.2.0"
webdriver-manager = "^4.0.0"
flask = "^3.0.0"


[tool.poetry.group.web.dependencies]
pandas = "^2.0.3"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
flask = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
