[project]
name = "pa-james"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.6"
dependencies = [
    "flask>=3.0.0",
    "pandas>=2.0.3",
]

[dependency-groups]
streamlit = [
    "scipy>=1.13.1",
    "streamlit>=1.36.0",
]
webscraper = [
    "selenium>=4.21.0",
    "numpy>=2.0.0",
    "webdriver-manager>=4.0.1",
    "flask>=3.0.3",
    "gunicorn>=22.0.0",
]
web = [
    "sqlalchemy>=2.0.31",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "flask>=3.0.3",
    "gunicorn>=22.0.0",
]
